FEAT: Disable shot buttons and put a x mark on a CricketNumber if all players closes it

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -62,5 +62,5 @@ button:disabled {
 }
 
 .shot-btn {
-  @apply min-w-16 font-bold;
+  @apply min-w-16 font-bold transition-opacity duration-200 disabled:opacity-30;
 }
